implement modal ui for issueDID page

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -12,7 +12,7 @@ VUE_APP_RPC_TARGET=https://evm.astar.network
 VUE_APP_SESSION_TIME=7200
 
 ## API ENDPOINT: use swagger
-VUE_APP_API_ENDPOINT=https://dev001.link
+VUE_APP_API_ENDPOINT=http://localhost:8888
 
 ## W3A LOGO
 VUE_APP_W3A_LOGO_LIGHT=https://dev001.link/images/header-logo-1.png
