--- a/api/package.json
+++ b/api/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.199.0",
     "@aws-sdk/client-secrets-manager": "^3.223.0",
+    "@azure/msal-node": "^2.0.2",
     "@hapi/joi": "^17.1.1",
     "@rumblefishdev/eth-signer-kms": "^2.2.0",
     "accesscontrol": "^2.2.1",
     "aws-sdk": "^2.1243.0",
     "axios": "^1.1.2",
+    "base64url": "^3.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "csrf": "^3.1.0",
