add pin to config

--- a/api/src/config/issuance_request_config.json
+++ b/api/src/config/issuance_request_config.json
@@ -1,5 +1,5 @@
 {
-    "includeQRCode": false,
+    "includeQRCode": true,
     "callback": {
         "url": "https://YOURPUBLICREACHABLEHOSTNAME/api/issuer/issuanceCallback",
         "state": "STATEWILLBESETINCODE"
@@ -10,5 +10,13 @@
         "purpose": "This credential prooves you are a Verified Credential Expert"
     },
     "type": "VerifiedCredentialExpert",
-    "manifest": "CREDENTIAL URL IN THIS SAMPLE WILL BE COPIED FROM CONFIG.JSON"
+    "manifest": "CREDENTIAL URL IN THIS SAMPLE WILL BE COPIED FROM CONFIG.JSON",
+    "pin": {
+        "value": "123456",
+        "length": 4
+    },
+    "claims": {
+        "given_name": "FIRSTNAME",
+        "family_name": "LASTNAME"
+    }
 }
