--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon src/server.js",
     "lint": "eslint --fix --ext .js .",
-    "test": "cross-env RUN_MODE=test jest --coverage"
+    "test": "cross-env RUN_MODE=test jest --coverage",
+    "load_data": "dotenv -e .env.development node load_data/init_db.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.199.0",
@@ -39,6 +40,7 @@
     "web3": "^1.8.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.21.2"
+    "axios-mock-adapter": "^1.21.2",
+    "dotenv-cli": "^7.3.0"
   }
 }
