--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.28.0",
     "ethers": "^5.6.9",
+    "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^7.14.1",
     "mitt": "^1.0.1",
