--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@ethereumjs/tx": "4.0.2"
   },
   "dependencies": {
+    "@decentralized-identity/ion-tools": "^1.1.4",
     "@ethereumjs/tx": "4.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
