--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.3",
     "jest": "^29.0.3",
     "jose": "^4.9.3",
+    "jwt-decode": "^3.1.2",
     "log4js": "^6.7.0",
     "moment-timezone": "^0.5.39",
     "multer": "^1.4.5-lts.1",
