fix login error

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,9 +1,10 @@
 ## Web3Auth Client ID
 VUE_APP_WEB3AUTH_CLIENT_ID=BKYKZETkmYM65b8gwh-l5lq03NFN1GuYu7HWaaYOlYesz1PuIcCIcNcHjxjqlL4wbW_2zTBlbViQxcAzazk3u6A
 
+
 ## Chain info: Shibuya Network
-VUE_APP_CHAIN_ID=0x250
-VUE_APP_RPC_TARGET=https://evm.astar.network
+VUE_APP_CHAIN_ID=0x51
+VUE_APP_RPC_TARGET=https://shibuya.public.blastapi.io
 
 ## Web3Auth session
 ### Session time: sessionTime (in seconds) for idToken issued by Web3Auth for server side verification.
@@ -25,4 +26,4 @@ VUE_APP_W3A_NAME=RE:
 VUE_APP_W3A_LANG=ja
 
 #MODE OF NET
-VUE_APP_MODE=mainnet
+VUE_APP_MODE=testnet
