--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,14 +23,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@toruslabs/openlogin-jrpc": "^2.6.0",
-    "@walletconnect/client": "^1.8.0",
-    "@web3auth/base": "^4.6.0",
-    "@web3auth/metamask-adapter": "^4.6.0",
-    "@web3auth/modal": "^4.6.0",
-    "@web3auth/openlogin-adapter": "^4.6.0",
-    "@web3auth/wallet-connect-v1-adapter": "^4.6.0",
-    "@web3auth/web3auth": "^2.1.3",
+    "@toruslabs/openlogin-jrpc": "^5.3.0",
+    "@walletconnect/sign-client": "^2.10.2",
+    "@web3auth/metamask-adapter": "^7.0.4",
+    "@web3auth/modal": "^7.0.4",
     "@yeger/vue-masonry-wall": "^3.3.1",
     "axios": "^0.27.2",
     "axios-extensions": "^3.1.6",
@@ -48,6 +44,8 @@
     "moment": "^2.29.4",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^2.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.13",
@@ -57,7 +55,7 @@
     "vue3-popper": "^1.5.0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
-    "web3": "^1.8.2"
+    "web3": "^1.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
